Fix mobile spacing issue

--- a/covid-chart/src/App.module.scss
+++ b/covid-chart/src/App.module.scss
@@ -18,7 +18,13 @@
   }
 
   * + * {
-    margin-left: 1rem;
+    margin-left: 0.25rem;
+  }
+
+  @media screen and (min-width: 400px) {
+    * + * {
+      margin-left: 1rem;
+    }
   }
 }
 
